--- a/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
+++ b/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
