wip. add IDataTransferService

--- a/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
+++ b/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShareClipbrd.Core\ShareClipbrd.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
