--- a/ShareClipbrd/ShareClipbrdApp.Win/App.config
+++ b/ShareClipbrd/ShareClipbrdApp.Win/App.config
@@ -13,6 +13,9 @@
             <setting name="MainFormSize" serializeAs="String">
                 <value>100, 100</value>
             </setting>
+            <setting name="HostAddress" serializeAs="String">
+                <value>127.0.0.1:8090</value>
+            </setting>
         </ShareClipbrdApp.Win.Properties.Settings>
     </userSettings>
 </configuration>
