--- a/ShareClipbrd/ShareClipbrdApp.Win/App.config
+++ b/ShareClipbrd/ShareClipbrdApp.Win/App.config
@@ -16,6 +16,9 @@
             <setting name="HostAddress" serializeAs="String">
                 <value>127.0.0.1:8090</value>
             </setting>
+            <setting name="PartnerAddress" serializeAs="String">
+                <value>127.0.0.1:8091</value>
+            </setting>
         </ShareClipbrdApp.Win.Properties.Settings>
     </userSettings>
 </configuration>
