create cross-platform ClipboardSerializer

--- a/ShareClipbrd/ShareClipbrdApp.Win.Tests/ShareClipbrdApp.Win.Tests.csproj
+++ b/ShareClipbrd/ShareClipbrdApp.Win.Tests/ShareClipbrdApp.Win.Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ShareClipbrdApp.Win\ShareClipbrdApp.Win.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
