--- a/ShareClipbrd/ShareClipbrdApp.Win/App.config
+++ b/ShareClipbrd/ShareClipbrdApp.Win/App.config
@@ -19,6 +19,9 @@
             <setting name="PartnerAddress" serializeAs="String">
                 <value>127.0.0.1:8091</value>
             </setting>
+            <setting name="Compression" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ShareClipbrdApp.Win.Properties.Settings>
     </userSettings>
 </configuration>
