--- a/ShareClipbrd/ShareClipbrdApp/.editorconfig
+++ b/ShareClipbrd/ShareClipbrdApp/.editorconfig
@@ -1,3 +1,5 @@
+# top-most EditorConfig file
+root = true
 
 [*.cs]
 #### Naming styles ####
@@ -110,7 +112,7 @@ dotnet_naming_style.pascal_case.capitalization = pascal_case
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 indent_size = 4
-end_of_line = cr
+end_of_line = lf
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
