--- a/ShareClipbrd/ShareClipbrd.Core.Tests/ShareClipbrd.Core.Tests.csproj
+++ b/ShareClipbrd/ShareClipbrd.Core.Tests/ShareClipbrd.Core.Tests.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
