--- a/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
+++ b/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Guard.Net" Version="3.0.0" />
     <PackageReference Include="MessagePack" Version="2.5.108" />
   </ItemGroup>
