--- a/ShareClipbrd/ShareClipbrdApp.Win.Tests/ShareClipbrdApp.Win.Tests.csproj
+++ b/ShareClipbrd/ShareClipbrdApp.Win.Tests/ShareClipbrdApp.Win.Tests.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
