--- a/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
+++ b/ShareClipbrd/ShareClipbrdApp.Win/ShareClipbrdApp.Win.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
