--- a/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
+++ b/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
@@ -53,6 +53,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="C:\Projects\ShareClipbrd\ShareClipbrd\ShareClipbrdApp\.editorconfig" />
+    <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 </Project>
