--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,54 @@
 				"isDefault": true
 			},
 			"label": "dotnet: build"			
-		}
+		},
+		{
+			"label": "build Release",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj",
+                "-c",
+                "Release"
+            ],
+            "problemMatcher": "$msCompile"		
+        },
+        {
+            "label": "build",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/ShareClipbrd/ShareClipbrd.sln",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/ShareClipbrd/ShareClipbrd.sln",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "watch",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "watch",
+                "run",
+                "--project",
+                "${workspaceFolder}/ShareClipbrd/ShareClipbrd.sln"
+            ],
+            "problemMatcher": "$msCompile"
+        }
 	]
 }
