add 3 settings profiles

--- a/ShareClipbrd/ShareClipbrdApp/App.config
+++ b/ShareClipbrd/ShareClipbrdApp/App.config
@@ -2,10 +2,40 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ShareClipbrdApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ShareClipbrdApp.Properties.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <ShareClipbrdApp.Properties.Settings>
+            <setting name="MainFormLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="MainFormSize" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="HostAddress0" serializeAs="String">
+                <value>127.0.0.1:8090</value>
+            </setting>
+            <setting name="PartnerAddress0" serializeAs="String">
+                <value>127.0.0.1:8091</value>
+            </setting>
+            <setting name="HostAddress1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PartnerAddress1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="HostAddress2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PartnerAddress2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SettingsProfile" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </ShareClipbrdApp.Properties.Settings>
         <ShareClipbrdApp.Properties.Settings1>
             <setting name="MainFormLocation" serializeAs="String">
                 <value>0, 0</value>
