--- a/ShareClipbrd/Clipboard.Core/Clipboard.Core.csproj
+++ b/ShareClipbrd/Clipboard.Core/Clipboard.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="InternalsVisibleTo">
+    <InternalsVisibleTo Include="Clipboard.Core.Tests" />
     <InternalsVisibleTo Include="Clipboard.Win" />
     <InternalsVisibleTo Include="Clipboard" />
   </ItemGroup>
