wip. X11 specific clipboard lib

--- a/ShareClipbrd/Clipboard.X11/Clipboard.X11.csproj
+++ b/ShareClipbrd/Clipboard.X11/Clipboard.X11.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\Clipboard.Core\Clipboard.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup Label="InternalsVisibleTo">
+    <InternalsVisibleTo Include="Clipboard" />
+  </ItemGroup>
 </Project>
