--- a/ShareClipbrd/Clipboard/Clipboard.csproj
+++ b/ShareClipbrd/Clipboard/Clipboard.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">net7.0-windows</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('linux'))">net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -15,8 +15,8 @@
     <ProjectReference Include="..\Clipboard.Win\Clipboard.Win.csproj" />
   </ItemGroup>
   
-  <ItemGroup Condition="$([MSBuild]::IsOSUnixLike())">
-    <ProjectReference Include="..\Clipboard.Win\Clipboard.X11.csproj" />
+  <ItemGroup Condition="$([MSBuild]::IsOSPlatform('linux'))">
+    <ProjectReference Include="..\Clipboard.X11\Clipboard.X11.csproj" />
   </ItemGroup>
 
 </Project>
