wip. use platform specific clipboard lib

--- a/ShareClipbrd/Clipboard.Core/Clipboard.Core.csproj
+++ b/ShareClipbrd/Clipboard.Core/Clipboard.Core.csproj
@@ -11,5 +11,6 @@
     <InternalsVisibleTo Include="Clipboard.Win" />
     <InternalsVisibleTo Include="Clipboard.X11" />
     <InternalsVisibleTo Include="Clipboard" />
+    <InternalsVisibleTo Include="ShareClipbrdApp" />
   </ItemGroup>
 </Project>
