--- a/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
+++ b/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">net7.0-windows</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('linux'))">net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -16,8 +17,14 @@
     <PackageReference Include="System.IO.Hashing" Version="7.0.0" />
   </ItemGroup>
 
+
+  
   <ItemGroup Label="InternalsVisibleTo">
     <InternalsVisibleTo Include="ShareClipbrd.Core.Tests" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Clipboard\Clipboard.csproj" />
   </ItemGroup>
   
 </Project>
