--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,8 +28,8 @@ jobs:
 
     - name: Publish
       run: |
-        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease --no-self-contained --use-current-runtime -o ./out/win --os win -p:PublishProfile=FolderProfile -p:DebugType=None -p:DebugSymbols=false
-        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease --no-self-contained --use-current-runtime -o ./out/linux --os linux -p:PublishProfile=FolderProfile -p:DebugType=None 
+        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r win-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/win64 -p:DebugType=None
+        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/linux64 -p:DebugType=None
 
     - name: Deploy Win
       uses: actions/upload-artifact@v3
