--- a/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
+++ b/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework Condition="$([MSBuild]::IsOSPlatform('windows'))">net7.0-windows</TargetFramework>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">net7.0-windows</TargetFrameworks>
     <TargetFramework Condition="$([MSBuild]::IsOSPlatform('linux'))">net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
