--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,17 +31,20 @@ jobs:
         dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r win-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/win64 -p:DebugType=None
         dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/linux64 -p:DebugType=None
 
-    - name: Deploy Win
+    - name: Tar Linux64 files 
+      run: tar -cvf ShareClipbrd.tar ./out/linux64/
+    
+    - name: Deploy Win64
       uses: actions/upload-artifact@v3
       with:
-        name: win
+        name: win64
         path: ./out/win64/
         retention-days: 90
       
-    - name: Deploy Linux
+    - name: Deploy Linux64
       uses: actions/upload-artifact@v3
       with:
-        name: linux
-        path: ./out/linux64/
+        name: linux64
+        path: ./out/linux64/ShareClipbrd.tar
         retention-days: 90  
         
