--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Publish
       run: |
         dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r win-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/win64 -p:DebugType=None
-        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/linux64 -p:DebugType=None
+        dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/_linux64 -p:DebugType=None
 
     - name: Tar Linux64 files 
-      run: tar -cvf ShareClipbrd.tar ./out/linux64/
+      run: mkdir ./out/linux64 && tar -cvf ./out/linux64/ShareClipbrd.tar ./out/_linux64/ && rm -rf ./out/_linux64
     
     - name: Deploy Win64
       uses: actions/upload-artifact@v3
