--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
         dotnet publish ./ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o ./out/_linux64 -p:DebugType=None
 
     - name: Tar Linux64 files 
-      run: mkdir ./out/linux64 && tar -cvf ./out/linux64/ShareClipbrd.tar ./out/_linux64/ && rm -rf ./out/_linux64
+      run: mkdir -p ./out/linux64 && tar -cjvf ./out/linux64/ShareClipbrd.tar -C ./out/_linux64/ . && rm -rf ./out/_linux64
     
     - name: Deploy Win64
       uses: actions/upload-artifact@v3
