--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Publish
       run: |
-        dotnet publish ShareClipbrd\ShareClipbrdApp\ShareClipbrdApp.csproj -c PublishRelease -r win-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o out\win64 -p:DebugType=None -f=net7.0-windows
+        dotnet publish ShareClipbrd\ShareClipbrdApp\ShareClipbrdApp.csproj -c PublishRelease -r win-x64 -p:PublishSingleFile=true --self-contained false -o out\win64 -p:DebugType=None -f=net7.0-windows
         dotnet publish ShareClipbrd\ShareClipbrdApp\ShareClipbrdApp.csproj -c PublishRelease -r linux-x64 -p:PublishSingleFile=true --self-contained false --use-current-runtime -o out\_linux64 -p:DebugType=None -f=net7.0-windows
 
     - name: Tar Linux64 files 
