--- a/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
+++ b/ShareClipbrd/ShareClipbrdApp/ShareClipbrdApp.csproj
@@ -64,4 +64,7 @@
     <InternalsVisibleTo Include="ShareClipbrdApp.Tests" />
   </ItemGroup>
   
+    <ItemGroup>
+    <AvaloniaResource Include="Assets\*" />
+  </ItemGroup>
 </Project>
