DataClient. add config parameter "ClientTimeout" for set connection timeout

--- a/ShareClipbrd/ShareClipbrdApp/App.config
+++ b/ShareClipbrd/ShareClipbrdApp/App.config
@@ -35,6 +35,9 @@
             <setting name="SettingsProfile" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="ClientTimeout" serializeAs="String">
+                <value>00:00:05</value>
+            </setting>
         </ShareClipbrdApp.Properties.Settings>
         <ShareClipbrdApp.Properties.Settings1>
             <setting name="MainFormLocation" serializeAs="String">
