clear default ip address settings

--- a/ShareClipbrd/ShareClipbrdApp/App.config
+++ b/ShareClipbrd/ShareClipbrdApp/App.config
@@ -15,10 +15,10 @@
                 <value>100, 100</value>
             </setting>
             <setting name="HostAddress0" serializeAs="String">
-                <value>127.0.0.1:8090</value>
+                <value />
             </setting>
             <setting name="PartnerAddress0" serializeAs="String">
-                <value>127.0.0.1:8091</value>
+                <value />
             </setting>
             <setting name="HostAddress1" serializeAs="String">
                 <value />
