Settings. Set default connection mode to "Automatic, with port"

--- a/ShareClipbrd/ShareClipbrdApp/App.config
+++ b/ShareClipbrd/ShareClipbrdApp/App.config
@@ -15,7 +15,7 @@
                 <value>100, 100</value>
             </setting>
             <setting name="HostAddress0" serializeAs="String">
-                <value />
+                <value>mdns::61001</value>
             </setting>
             <setting name="PartnerAddress0" serializeAs="String">
                 <value />
