--- a/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
+++ b/ShareClipbrd/ShareClipbrd.Core/ShareClipbrd.Core.csproj
@@ -14,7 +14,9 @@
   <ItemGroup>
     <PackageReference Include="Guard.Net" Version="3.0.0" />
     <PackageReference Include="Makaretu.Dns.Multicast" Version="0.27.0" />
-    <PackageReference Include="System.IO.Hashing" Version="9.0.2" />
+    <PackageReference Include="System.IO.Hashing" Version="10.0.2" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
 
